--- a/Car towings.ipynb
+++ b/Car towings.ipynb
@@ -3348,9 +3348,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of schedule changes for all street segments: 5537\n",
+      "Total number of snow removal schedules: 890131\n"
+     ]
+    }
+   ],
    "source": [
     "# Get street segments that had more than one scheduled time in one day\n",
     "\n",
@@ -3597,23 +3606,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"['during_restriction'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-101-e0eb06d74841>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m changed_time_tows = changed_times[(changed_times.DATE_ORIGI >= changed_times.DATE_DEB_PLANIF) \n\u001b[0;32m      6\u001b[0m              &(changed_times.DATE_ORIGI <= changed_times.DATE_FIN_PLANIF) ].UID.unique()\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mchanged_times\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchanged_times\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mchanged_times\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mUID\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchanged_time_tows\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgood_cols\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Number of towings in segments that changed schedules: {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchanged_times\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mUID\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mchanged_times\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\rochar\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\geopandas\\geodataframe.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    374\u001b[0m         \u001b[0mGeoDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    375\u001b[0m         \"\"\"\n\u001b[1;32m--> 376\u001b[1;33m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGeoDataFrame\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    377\u001b[0m         \u001b[0mgeo_col\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_geometry_column_name\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    378\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstring_types\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mgeo_col\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\rochar\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2051\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2052\u001b[0m             \u001b[1;31m# either boolean or fancy integer index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2053\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2054\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2055\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_frame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\rochar\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_getitem_array\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2095\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2096\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2097\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2098\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2099\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\rochar\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[1;34m(self, obj, axis, is_setter)\u001b[0m\n\u001b[0;32m   1228\u001b[0m                 \u001b[0mmask\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1229\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1230\u001b[1;33m                     \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%s not in index'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mobjarr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1231\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1232\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0m_values_from_object\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"['during_restriction'] not in index\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of towings in segments that changed schedules: 355\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UID</th>\n",
+       "      <th>ARRONDISSE</th>\n",
+       "      <th>COTE_RUE_ID</th>\n",
+       "      <th>DATE_ORIGI</th>\n",
+       "      <th>DATE_DEB_PLANIF</th>\n",
+       "      <th>DATE_FIN_PLANIF</th>\n",
+       "      <th>ETAT_DENEIG</th>\n",
+       "      <th>DATE_MAJ</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Villeray - Saint-Michel - Parc-Extension</td>\n",
+       "      <td>10704222</td>\n",
+       "      <td>2015-12-30 07:21:00</td>\n",
+       "      <td>2015-12-30 07:00:00</td>\n",
+       "      <td>2015-12-30 19:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-31 06:15:49</td>\n",
+       "      <td>POINT (-73.6134731328 45.5654383474)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Villeray - Saint-Michel - Parc-Extension</td>\n",
+       "      <td>10704222</td>\n",
+       "      <td>2015-12-30 07:21:00</td>\n",
+       "      <td>2015-12-30 19:00:00</td>\n",
+       "      <td>2015-12-31 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-30 12:43:12</td>\n",
+       "      <td>POINT (-73.6134731328 45.5654383474)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Côte-des-Neiges - Notre-Dame-de-Grâce</td>\n",
+       "      <td>13002732</td>\n",
+       "      <td>2015-12-31 02:14:00</td>\n",
+       "      <td>2015-12-30 07:00:00</td>\n",
+       "      <td>2015-12-30 19:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-31 09:07:22</td>\n",
+       "      <td>POINT (-73.6322474893 45.486848684)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Côte-des-Neiges - Notre-Dame-de-Grâce</td>\n",
+       "      <td>13002732</td>\n",
+       "      <td>2015-12-31 02:14:00</td>\n",
+       "      <td>2015-12-30 19:00:00</td>\n",
+       "      <td>2015-12-31 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-30 09:27:18</td>\n",
+       "      <td>POINT (-73.6322474893 45.486848684)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>44</td>\n",
+       "      <td>Côte-des-Neiges - Notre-Dame-de-Grâce</td>\n",
+       "      <td>13002732</td>\n",
+       "      <td>2015-12-31 02:20:00</td>\n",
+       "      <td>2015-12-30 07:00:00</td>\n",
+       "      <td>2015-12-30 19:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-31 09:07:22</td>\n",
+       "      <td>POINT (-73.6320269201 45.4870669705)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>44</td>\n",
+       "      <td>Côte-des-Neiges - Notre-Dame-de-Grâce</td>\n",
+       "      <td>13002732</td>\n",
+       "      <td>2015-12-31 02:20:00</td>\n",
+       "      <td>2015-12-30 19:00:00</td>\n",
+       "      <td>2015-12-31 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-30 09:27:18</td>\n",
+       "      <td>POINT (-73.6320269201 45.4870669705)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>95391</td>\n",
+       "      <td>Plateau-Mont-Royal</td>\n",
+       "      <td>12210092</td>\n",
+       "      <td>2018-01-09 00:09:00</td>\n",
+       "      <td>2018-01-08 19:00:00</td>\n",
+       "      <td>2018-01-09 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-01-08 10:38:37</td>\n",
+       "      <td>POINT (-73.5680738697 45.5171371129)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>95391</td>\n",
+       "      <td>Plateau-Mont-Royal</td>\n",
+       "      <td>12210092</td>\n",
+       "      <td>2018-01-09 00:09:00</td>\n",
+       "      <td>2018-01-08 23:59:59</td>\n",
+       "      <td>2018-01-09 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-01-08 10:39:47</td>\n",
+       "      <td>POINT (-73.5680738697 45.5171371129)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>68</td>\n",
+       "      <td>Plateau-Mont-Royal</td>\n",
+       "      <td>12503822</td>\n",
+       "      <td>2015-12-31 02:09:00</td>\n",
+       "      <td>2015-12-30 00:00:00</td>\n",
+       "      <td>2015-12-30 07:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2015-12-29 18:45:24</td>\n",
+       "      <td>POINT (-73.57929353670001 45.5168956673)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>68</td>\n",
+       "      <td>Plateau-Mont-Royal</td>\n",
+       "      <td>12503822</td>\n",
+       "      <td>2015-12-31 02:09:00</td>\n",
+       "      <td>2015-12-30 19:00:00</td>\n",
+       "      <td>2015-12-31 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-12-29 17:56:53</td>\n",
+       "      <td>POINT (-73.57929353670001 45.5168956673)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>68</td>\n",
+       "      <td>Plateau-Mont-Royal</td>\n",
+       "      <td>12503822</td>\n",
+       "      <td>2015-12-31 02:09:00</td>\n",
+       "      <td>2018-01-08 19:00:00</td>\n",
+       "      <td>2018-01-09 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-01-08 10:38:37</td>\n",
+       "      <td>POINT (-73.57929353670001 45.5168956673)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>68</td>\n",
+       "      <td>Plateau-Mont-Royal</td>\n",
+       "      <td>12503822</td>\n",
+       "      <td>2015-12-31 02:09:00</td>\n",
+       "      <td>2018-01-08 23:59:59</td>\n",
+       "      <td>2018-01-09 07:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018-01-08 10:39:47</td>\n",
+       "      <td>POINT (-73.57929353670001 45.5168956673)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       UID                                ARRONDISSE COTE_RUE_ID  \\\n",
+       "0       13  Villeray - Saint-Michel - Parc-Extension    10704222   \n",
+       "1       13  Villeray - Saint-Michel - Parc-Extension    10704222   \n",
+       "88      43     Côte-des-Neiges - Notre-Dame-de-Grâce    13002732   \n",
+       "89      43     Côte-des-Neiges - Notre-Dame-de-Grâce    13002732   \n",
+       "90      44     Côte-des-Neiges - Notre-Dame-de-Grâce    13002732   \n",
+       "91      44     Côte-des-Neiges - Notre-Dame-de-Grâce    13002732   \n",
+       "126  95391                        Plateau-Mont-Royal    12210092   \n",
+       "127  95391                        Plateau-Mont-Royal    12210092   \n",
+       "128     68                        Plateau-Mont-Royal    12503822   \n",
+       "129     68                        Plateau-Mont-Royal    12503822   \n",
+       "130     68                        Plateau-Mont-Royal    12503822   \n",
+       "131     68                        Plateau-Mont-Royal    12503822   \n",
+       "\n",
+       "             DATE_ORIGI     DATE_DEB_PLANIF     DATE_FIN_PLANIF ETAT_DENEIG  \\\n",
+       "0   2015-12-30 07:21:00 2015-12-30 07:00:00 2015-12-30 19:00:00           2   \n",
+       "1   2015-12-30 07:21:00 2015-12-30 19:00:00 2015-12-31 07:00:00           2   \n",
+       "88  2015-12-31 02:14:00 2015-12-30 07:00:00 2015-12-30 19:00:00           2   \n",
+       "89  2015-12-31 02:14:00 2015-12-30 19:00:00 2015-12-31 07:00:00           2   \n",
+       "90  2015-12-31 02:20:00 2015-12-30 07:00:00 2015-12-30 19:00:00           2   \n",
+       "91  2015-12-31 02:20:00 2015-12-30 19:00:00 2015-12-31 07:00:00           2   \n",
+       "126 2018-01-09 00:09:00 2018-01-08 19:00:00 2018-01-09 07:00:00           2   \n",
+       "127 2018-01-09 00:09:00 2018-01-08 23:59:59 2018-01-09 07:00:00           2   \n",
+       "128 2015-12-31 02:09:00 2015-12-30 00:00:00 2015-12-30 07:00:00           3   \n",
+       "129 2015-12-31 02:09:00 2015-12-30 19:00:00 2015-12-31 07:00:00           2   \n",
+       "130 2015-12-31 02:09:00 2018-01-08 19:00:00 2018-01-09 07:00:00           2   \n",
+       "131 2015-12-31 02:09:00 2018-01-08 23:59:59 2018-01-09 07:00:00           2   \n",
+       "\n",
+       "               DATE_MAJ                                  geometry  \n",
+       "0   2015-12-31 06:15:49      POINT (-73.6134731328 45.5654383474)  \n",
+       "1   2015-12-30 12:43:12      POINT (-73.6134731328 45.5654383474)  \n",
+       "88  2015-12-31 09:07:22       POINT (-73.6322474893 45.486848684)  \n",
+       "89  2015-12-30 09:27:18       POINT (-73.6322474893 45.486848684)  \n",
+       "90  2015-12-31 09:07:22      POINT (-73.6320269201 45.4870669705)  \n",
+       "91  2015-12-30 09:27:18      POINT (-73.6320269201 45.4870669705)  \n",
+       "126 2018-01-08 10:38:37      POINT (-73.5680738697 45.5171371129)  \n",
+       "127 2018-01-08 10:39:47      POINT (-73.5680738697 45.5171371129)  \n",
+       "128 2015-12-29 18:45:24  POINT (-73.57929353670001 45.5168956673)  \n",
+       "129 2015-12-29 17:56:53  POINT (-73.57929353670001 45.5168956673)  \n",
+       "130 2018-01-08 10:38:37  POINT (-73.57929353670001 45.5168956673)  \n",
+       "131 2018-01-08 10:39:47  POINT (-73.57929353670001 45.5168956673)  "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3623,7 +3840,7 @@
     "\n",
     "changed_time_tows = changed_times[(changed_times.DATE_ORIGI >= changed_times.DATE_DEB_PLANIF) \n",
     "             &(changed_times.DATE_ORIGI <= changed_times.DATE_FIN_PLANIF) ].UID.unique()\n",
-    "changed_times = changed_times[changed_times.UID.isin(changed_time_tows)][good_cols]\n",
+    "changed_times = changed_times[changed_times.UID.isin(changed_time_tows)][cols]\n",
     "print(\"Number of towings in segments that changed schedules: {}\".format(len(changed_times.UID.unique())))\n",
     "changed_times.head(12)"
    ]
